--- a/build
+++ b/build
@@ -1,7 +1,3 @@
-#!/bin/bash
-OS=armv7hf
-[[ "$HOSTTYPE" == "x86_64" ]] && OS=amd64
-docker container prune -f
-docker build -t xptsp/pivpn:${OS}-v2 .
-docker images | grep "<none>" | (while read a b c d; do docker rmi $c; done)
+docker buildx build --platform=linux/amd64,linux/arm64,linux/arm/v7 --push -t dm2mf/pivpn:debian-bullseye .
+
 
